Fixed overflow bug on mobile

--- a/style.css
+++ b/style.css
@@ -8,11 +8,14 @@
     scroll-behavior: smooth;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     background-color: #fff;
     min-height: 100vh;
     position: relative;
-    overflow-x: hidden;
 }
 
 /* header */
